@@ -108,6 +108,7 @@ FileOM.com                      - flom
 FileOwn.com                     - flown
 FilePack.pl                     - flpack
 FilePost.com                    - flpst
+FilePup.net                     - fp
 FileRio.in                      - flr
 FileServe.com                   - fsrv
 FilesBomb.in                    - flsbmb
