@@ -1,0 +1,129 @@
+/*
+ * To change this template, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package neembuu.uploader.accounts;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.logging.Level;
+import neembuu.uploader.translation.Translation;
+import neembuu.uploader.exceptions.NUException;
+import neembuu.uploader.exceptions.accounts.NUInvalidLoginException;
+import neembuu.uploader.httpclient.NUHttpClient;
+import neembuu.uploader.httpclient.httprequest.NUHttpPost;
+import neembuu.uploader.interfaces.abstractimpl.AbstractAccount;
+import neembuu.uploader.utils.NUHttpClientUtils;
+import neembuu.uploader.utils.NULogger;
+import org.apache.http.Header;
+import org.apache.http.HttpResponse;
+import org.apache.http.NameValuePair;
+import org.apache.http.client.CookieStore;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.entity.UrlEncodedFormEntity;
+import org.apache.http.client.protocol.ClientContext;
+import org.apache.http.impl.client.BasicCookieStore;
+import org.apache.http.message.BasicNameValuePair;
+import org.apache.http.protocol.BasicHttpContext;
+import org.apache.http.util.EntityUtils;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+
+/**
+ *
+ * @author Valentin Lafranca
+ */
+public class FilePupAccount extends AbstractAccount {
+
+    private HttpClient httpclient = NUHttpClient.getHttpClient();
+    private HttpResponse httpResponse;
+    private NUHttpPost httpPost;
+    private CookieStore cookieStore;
+    private String responseString;
+
+    public FilePupAccount() {
+        KEY_USERNAME = "fpusername";
+        KEY_PASSWORD = "fppassword";
+        HOSTNAME = "FilePup.net";
+    }
+
+    @Override
+    public void disableLogin() {
+        resetLogin();
+        NULogger.getLogger().log(Level.INFO, "{0} account disabled", getHOSTNAME());
+    }
+
+    @Override
+    public void login() {
+        loginsuccessful = false;
+        try {
+            initialize();
+
+            NULogger.getLogger().info("Trying to log in to FilePup.net");
+            httpPost = new NUHttpPost("http://www.filepup.net/loginaa.php");
+
+            List<NameValuePair> formparams = new ArrayList<NameValuePair>();
+            formparams.add(new BasicNameValuePair("task", "dologin"));
+            formparams.add(new BasicNameValuePair("user", getUsername()));
+            formparams.add(new BasicNameValuePair("pass", getPassword()));
+            formparams.add(new BasicNameValuePair("return", "./members/myfiles.php"));
+            formparams.add(new BasicNameValuePair("submit", "Sign In"));
+
+            UrlEncodedFormEntity entity = new UrlEncodedFormEntity(formparams, "UTF-8");
+            httpPost.setEntity(entity);
+            httpResponse = httpclient.execute(httpPost, httpContext);
+            NULogger.getLogger().info(httpResponse.getStatusLine().toString());
+            Header lastHeader = httpResponse.getLastHeader("Location");
+
+            if (lastHeader != null && lastHeader.getValue().contains("./members/myfiles.php")) {
+                EntityUtils.consume(httpResponse.getEntity());
+                loginsuccessful = true;
+                username = getUsername();
+                password = getPassword();
+
+                //Getting user type
+                responseString = NUHttpClientUtils.getData("http://www.filepup.net/members/myfiles.php", httpContext);
+
+                if (responseString.contains("FREE MEMBER")) {
+                    premium = false;
+                } else {
+                    premium = true;
+                }
+                
+                NULogger.getLogger().info("FilePup.net login successful!");
+                NULogger.getLogger().log(Level.INFO, "FilePost.com premium? {0}", premium);
+
+            } else {
+                //Get error message
+                responseString = EntityUtils.toString(httpResponse.getEntity());
+                Document doc = Jsoup.parse(responseString);
+
+                String error = doc.select(".error").first().text();
+
+                throw new NUInvalidLoginException(getUsername(), HOSTNAME);
+            }
+        } catch (NUException ex) {
+            resetLogin();
+            ex.printError();
+            accountUIShow().setVisible(true);
+        } catch (Exception e) {
+            resetLogin();
+            NULogger.getLogger().log(Level.SEVERE, "{0}: {1}", new Object[]{getClass().getName(), e});
+            showWarningMessage(Translation.T().loginerror(), HOSTNAME);
+            accountUIShow().setVisible(true);
+        }
+    }
+
+    private void initialize() throws Exception {
+        httpContext = new BasicHttpContext();
+        cookieStore = new BasicCookieStore();
+        httpContext.setAttribute(ClientContext.COOKIE_STORE, cookieStore);
+    }
+
+    private void resetLogin() {
+        loginsuccessful = false;
+        username = "";
+        password = "";
+    }
+
+}
